# plugin-GUI

./: .gitignore  .gitmodules  open-ephys-GUI.sublime-project  open-ephys-GUI.sublime-workspace  readMe(ubuntu14)  readMe(ubuntu18)  tensorflowC++Install.txt
Plugins/: CMakeLists.txt
Plugins/ArduinoOutput/: ArduinoOutput.cpp  ArduinoOutput.h
Plugins/OnlineDecoding/: CMakeLists.txt  OpenEphysLib.cpp  jsoncpp.cpp
Plugins/OnlineDecoding/ClusterDecoder/: ClusterDecoder.sublime-project  ClusterDecoder.sublime-workspace  ClusterDecoderNetwork.cpp  ClusterDecoderNetwork.h  ClusterDecoderProcessor.cpp  ClusterDecoderProcessor.h  ClusterDecoderProcessorContentComponent.cpp  ClusterDecoderProcessorContentComponent.h  ClusterDecoderProcessorEditor.cpp  ClusterDecoderProcessorEditor.h  ClusterDecoderProcessorVisualizer.cpp  ClusterDecoderProcessorVisualizer.h  ClusterDecoderProcessorVisualizerContentComponent.cpp  ClusterDecoderProcessorVisualizerContentComponent.h
Plugins/OnlineDecoding/DefaultFilter/: DefaultFilter.cpp  DefaultFilter.h  DefaultFilterEditor.cpp  DefaultFilterEditor.h  DefaultFilterProcessor.cpp  DefaultFilterProcessor.h
Plugins/OnlineDecoding/PositionDecoder/: PositionDecoder.sublime-project  PositionDecoder.sublime-workspace  PositionDecoderNetwork.cpp  PositionDecoderNetwork.h  PositionDecoderProcessor.cpp  PositionDecoderProcessor.h  PositionDecoderProcessorContentComponent.cpp  PositionDecoderProcessorContentComponent.h  PositionDecoderProcessorEditor.cpp  PositionDecoderProcessorEditor.h  PositionDecoderProcessorVisualizer.cpp  PositionDecoderProcessorVisualizer.h  PositionDecoderProcessorVisualizerContentComponent.cpp  PositionDecoderProcessorVisualizerContentComponent.h
Plugins/OnlineDecoding/SleepScorer/: SleepScorer.sublime-project  SleepScorer.sublime-workspace  SleepScorerFilter.cpp  SleepScorerFilter.h  SleepScorerProcessor.cpp  SleepScorerProcessor.h  SleepScorerProcessorContentComponent.cpp  SleepScorerProcessorContentComponent.h  SleepScorerProcessorEditor.cpp  SleepScorerProcessorEditor.h  SleepScorerProcessorVisualizer.cpp  SleepScorerProcessorVisualizer.h  SleepScorerProcessorVisualizerContentComponent.cpp  SleepScorerProcessorVisualizerContentComponent.h
Plugins/OnlineDecoding/SleepScorer/sleepScoringFilters/: deltaFir332.fir  gammaFir332.fir  thetaFir332.fir
Plugins/OnlineDecoding/SpikeSorterWithStim/: SpikeSortBoxesWithStim.cpp  SpikeSortBoxesWithStim.h  SpikeSorterCanvasWithStim.cpp  SpikeSorterCanvasWithStim.h  SpikeSorterEditorWithStim.cpp  SpikeSorterEditorWithStim.h  SpikeSorterWithStim.cpp  SpikeSorterWithStim.h  SpikeSorterWithStim.sublime-workspace
Resources/Scripts/: 40-open-ephys.rules  install_linux_dependencies.sh
